--- a/docs/06.收藏夹/01.网站.md
+++ b/docs/06.收藏夹/01.网站.md
@@ -8,8 +8,11 @@ article: false
 
 ## 文档
 * [书栈网](https://www.bookstack.cn/) 里面有很多计算机行业相关技术文档
-## 图床工具
+
+## 工具
 * [PicX](https://picx.xpoet.cn/) 最近在用的图床，只需要连接github Token
+* [ilovepdf](https://www.ilovepdf.com/) pdf转换工具
 
 ## 博客
 * [Evan's blog](https://xugaoyi.com/) 本博客模板开发者的博客
+
