--- a/docs/03.其他/07.python相对路径解决.md
+++ b/docs/03.其他/07.python相对路径解决.md
@@ -9,7 +9,7 @@ tags:
 ---
 
 ::: tip
-这次终于解决了vscode使用python相对路径的问题了，记录一下！
+这次终于解决了vscode使用python相对路径的问题了，在这记录一下！
 :::
 
 ![image-20220113135302004](https://gitee.com/AdHeRe_418/image/raw/master/image/image-20220113135302004.png)
