--- a/docs/03.其他/07.python相对路径解决.md
+++ b/docs/03.其他/07.python相对路径解决.md
@@ -22,4 +22,8 @@ tags:
 
 ![image-20220113135628403](https://gitee.com/AdHeRe_418/image/raw/master/image/image-20220113135628403.png)
 
-![image-20220113135636271](https://gitee.com/AdHeRe_418/image/raw/master/image/image-20220113135636271.png)
+
+加上这一行 "cwd":"${fileDirname}"，就行了
+
+![image-20220128235820083](https://gitee.com/AdHeRe_418/image/raw/master/image/image-20220128235820083.png)
+
