--- a/docs/06.收藏夹/01.网站.md
+++ b/docs/06.收藏夹/01.网站.md
@@ -12,6 +12,8 @@ article: false
 ## 工具
 * [PicX](https://picx.xpoet.cn/) 最近在用的图床，只需要连接github Token
 * [ilovepdf](https://www.ilovepdf.com/) pdf转换工具
+* [OSCHINA开源中国](https://www.oschina.net/)
+* [OSCHINA在线实用工具](https://tool.oschina.net/) 有一些工具，比如正则测试
 
 ## 博客
 * [Evan's blog](https://xugaoyi.com/) 本博客模板开发者的博客
