--- a/docs/01.前端/02.qt开发/01.PySide6进行客户端前端开发.md
+++ b/docs/01.前端/02.qt开发/01.PySide6进行客户端前端开发.md
@@ -11,7 +11,7 @@ tags:
 ---
 
 ::: tip 前言
-这次接到需求，需要用qt for python进行客户端前端开发，是一个从来没碰过的领域，并且得在一个星期内学习并完成开发，所幸在规定时间内完成了开发，这里记录一下pyside6的学习。
+这次接到需求，需要用qt for python进行客户端前端开发，是一个从来没碰过的领域，并且得在一个星期内学习并完成开发，所幸在规定时间内完成了开发需求，这里记录一下pyside6的学习。
 :::
 
 # 1 安装pyside6
