--- a/docs/01.前端/01.vue/02.vuex学习.md
+++ b/docs/01.前端/01.vue/02.vuex学习.md
@@ -23,7 +23,7 @@ Vuex 是一个专为 [Vue.js](https://so.csdn.net/so/search?q=Vue.js&spm=1001.21
 
 # Vuex状态管理
 
-![image-20220312200934801](https://gitee.com/AdHeRe_418/image/raw/master/image/image-20220312200934801.png/)
+![image](https://cdn.staticaly.com/gh/AdhereZ/image-hosting@master/img/image.g3rszrmzix4.jpg)
 
 ## 特质
 
