--- a/docs/03.其他/05.picgo-core配合gitee搭建图床.md
+++ b/docs/03.其他/05.picgo-core配合gitee搭建图床.md
@@ -14,9 +14,9 @@ tags:
 
 ## 搭建完成效果图
 
-![image-20211201203122532](https://gitee.com/AdHeRe_418/image/raw/master/image/image-20211201203122532.png/)
+![image](https://cdn.staticaly.com/gh/AdhereZ/image-hosting@master/img/image.3ibvdrxuw7e0.webp)
 
- ![image-20211201203529538](https://gitee.com/AdHeRe_418/image/raw/master/image/image-20211201203529538.png/)
+ ![image](https://cdn.staticaly.com/gh/AdhereZ/image-hosting@master/img/image.6c1ndvevuuo0.jpg)
 
 ## 搭建过程帮助博客
 
