--- a/docs/04.客户端/01.python for qt/01.PySide6进行客户端前端开发.md
+++ b/docs/04.客户端/01.python for qt/01.PySide6进行客户端前端开发.md
@@ -3,7 +3,7 @@ title: PySide6进行客户端前端开发
 date: 2022-03-06 01:01:34
 permalink: /pages/187425/
 categories:
-  - 前端
+  - 客户端
   - qt开发
 tags:
   - qt开发
