--- a/docs/03.其他/07.python相对路径解决.md
+++ b/docs/03.其他/07.python相对路径解决.md
@@ -12,18 +12,18 @@ tags:
 这次终于解决了vscode使用python相对路径的问题了，在这记录一下！
 :::
 
-![image-20220113135302004](https://gitee.com/AdHeRe_418/image/raw/master/image/image-20220113135302004.png/)
+![image](https://cdn.staticaly.com/gh/AdhereZ/image-hosting@master/img/image.1u5kch8t1igw.jpg)
 
 这里还要说一下怎么打开launch.json文件
 
-![image-20220113135455658](https://gitee.com/AdHeRe_418/image/raw/master/image/image-20220113135455658.png/)
+![image](https://cdn.staticaly.com/gh/AdhereZ/image-hosting@master/img/image.15amj3o3bu2o.jpg)
 
 点击图中这个图标，就会出现下面这样，然后点击设置小图标就进去launch.json文件了
 
-![image-20220113135628403](https://gitee.com/AdHeRe_418/image/raw/master/image/image-20220113135628403.png/)
+![image](https://cdn.staticaly.com/gh/AdhereZ/image-hosting@master/img/image.xwvdgu8il2o.jpg)
 
 
 加上这一行 "cwd":"${fileDirname}"，就行了
 
-![image-20220128235820083](https://gitee.com/AdHeRe_418/image/raw/master/image/image-20220128235820083.png/)
+![image](https://cdn.staticaly.com/gh/AdhereZ/image-hosting@master/img/image.t7exrzhkpeo.jpg)
 
