--- a/docs/04.客户端/01.python for qt/01.PySide6进行客户端前端开发.md
+++ b/docs/04.客户端/01.python for qt/01.PySide6进行客户端前端开发.md
@@ -32,7 +32,7 @@ print(PySide6.QtCore.__version__)
 
 
 
-![image-20220305202328195](https://gitee.com/AdHeRe_418/image/raw/master/image/image-20220305202328195.png)
+![image-20220305202328195](https://gitee.com/AdHeRe_418/image/raw/master/image/image-20220305202328195.png/)
 
 
 
@@ -65,7 +65,7 @@ if __name__ == '__main__':
 
 运行结果
 
-![image-20220305215651821](https://gitee.com/AdHeRe_418/image/raw/master/image/image-20220305215651821.png)
+![image-20220305215651821](https://gitee.com/AdHeRe_418/image/raw/master/image/image-20220305215651821.png/)
 
 
 
@@ -287,13 +287,13 @@ setStyleSheet("""
 
 在你的安装的python文件中的Lib\site-packages\PySide6文件里，当你安装了PySide6时，会随着一起安装，我安装的anaconda3自带PySide6里有
 
-![image-20220306004720438](https://gitee.com/AdHeRe_418/image/raw/master/image/image-20220306004720438.png)
+![image-20220306004720438](https://gitee.com/AdHeRe_418/image/raw/master/image/image-20220306004720438.png/)
 
 
 
 打开
 
-![image-20220306004701345](https://gitee.com/AdHeRe_418/image/raw/master/image/image-20220306004701345.png)
+![image-20220306004701345](https://gitee.com/AdHeRe_418/image/raw/master/image/image-20220306004701345.png/)
 
 
 
@@ -315,15 +315,15 @@ pyside6-uic mainwindow.ui > ui_mainwindow.py
 
 1. 进入pycharm的设置界面
 
-   ![image-20220306004144415](https://gitee.com/AdHeRe_418/image/raw/master/image/image-20220306004144415.png)
+   ![image-20220306004144415](https://gitee.com/AdHeRe_418/image/raw/master/image/image-20220306004144415.png/)
 
 2. 进入外部工具设置
 
-   ![image-20220306004228927](https://gitee.com/AdHeRe_418/image/raw/master/image/image-20220306004228927.png)
+   ![image-20220306004228927](https://gitee.com/AdHeRe_418/image/raw/master/image/image-20220306004228927.png/)
 
 3. 进行添加配置
 
-   ![image-20220306004347840](https://gitee.com/AdHeRe_418/image/raw/master/image/image-20220306004347840.png)
+   ![image-20220306004347840](https://gitee.com/AdHeRe_418/image/raw/master/image/image-20220306004347840.png/)
 
 名称：pyside6-uic
 
@@ -335,7 +335,7 @@ pyside6-uic mainwindow.ui > ui_mainwindow.py
 
 
 
-![image-20220306004504438](https://gitee.com/AdHeRe_418/image/raw/master/image/image-20220306004504438.png)
+![image-20220306004504438](https://gitee.com/AdHeRe_418/image/raw/master/image/image-20220306004504438.png/)
 
 名称：pyside6-designer
 
@@ -349,7 +349,7 @@ pyside6-uic mainwindow.ui > ui_mainwindow.py
 
    右键选中要转换的ui文件需，如图选中点击即可
 
-   ![image-20220306004822473](https://gitee.com/AdHeRe_418/image/raw/master/image/image-20220306004822473.png)
+   ![image-20220306004822473](https://gitee.com/AdHeRe_418/image/raw/master/image/image-20220306004822473.png/)
 
 
 
